--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
     <script>
       System.config({
-        packages: {'app': {defaultExtension: 'js'}}
+        packages: {'dist/app': {defaultExtension: 'js'}}
       });
-      System.import('app/app');
+      System.import('dist/app/app');
     </script>
   </head>
   <body>
