--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>Angular 2 QuickStart</title>
-    <script src="../node_modules/es6-shim/es6-shim.js"></script>
-    <script src="../node_modules/systemjs/dist/system.src.js"></script>
-    <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="dist/lib/es6-shim.js"></script>
+    <script src="dist/lib/system.js"></script>
+    <script src="dist/lib/angular2.dev.js"></script>
     <script>
       System.config({
         packages: {'dist/app': {defaultExtension: 'js'}}
