--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!doctype html>
 <html>
   <head>
     <title>Angular 2 QuickStart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <my-app>Loading...</my-app>
+        
     <script src="dist/lib/es6-shim.js"></script>
     <script src="dist/lib/system.js"></script>
     <script src="dist/lib/angular2.dev.js"></script>
@@ -10,8 +16,5 @@
       });
       System.import('dist/app/app');
     </script>
-  </head>
-  <body>
-    <my-app>Loading...</my-app>
   </body>
 </html>
