refine components, add bootstrap and styles build task

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/dist/css/app.css">
   </head>
   <body>
     <my-app>Loading...</my-app>
-        
-    <script src="dist/lib/es6-shim.js"></script>
-    <script src="dist/lib/system.js"></script>
-    <script src="dist/lib/angular2.dev.js"></script>
+
+    <script src="/dist/lib/es6-shim.js"></script>
+    <script src="/dist/lib/system.js"></script>
+    <script src="/dist/lib/angular2.dev.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
       System.config({
         packages: {'dist/app': {defaultExtension: 'js'}}
